k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tech-challenge
  labels:
    name: tech-challenge
    environment: production
