k8s/newrelic-infrastructure.yaml
---
# DaemonSet - roda em cada node do cluster para coletar métricas de CPU/memória
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: newrelic-infrastructure
  namespace: tech-challenge
  labels:
    app: newrelic-infrastructure
spec:
  selector:
    matchLabels:
      app: newrelic-infrastructure
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: newrelic-infrastructure
    spec:
      serviceAccountName: newrelic-infrastructure
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
        - operator: Exists
          effect: NoSchedule
        - operator: Exists
          effect: NoExecute
      containers:
        - name: newrelic-infrastructure
          image: newrelic/infrastructure-bundle:latest
          securityContext:
            privileged: true
            runAsUser: 0
          volumeMounts:
            - mountPath: /host
              name: host-volume
              readOnly: true
            - mountPath: /var/run/docker.sock
              name: host-docker-socket
            - mountPath: /run/containerd/containerd.sock
              name: containerd-socket
            - mountPath: /sys
              name: host-sys
              readOnly: true
            - mountPath: /var/log
              name: host-log
            - mountPath: /etc/newrelic-infra
              name: nri-default-config-volume
            - name: host-cgroup
              mountPath: /sys/fs/cgroup
          resources:
            requests:
              memory: "150Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "200m"
      volumes:
        - name: host-volume
          hostPath:
            path: /
        - name: host-docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: containerd-socket
          hostPath:
            path: /run/containerd/containerd.sock
        - name: host-sys
          hostPath:
            path: /sys
        - name: host-log
          hostPath:
            path: /var/log
        - name: host-cgroup
          hostPath:
            path: /sys/fs/cgroup
        - name: nri-default-config-volume
          configMap:
            name: newrelic-infrastructure-config
            items:
              - key: newrelic-infra.yml
                path: newrelic-infra.yml
