k8s/execution-service.yml
apiVersion: v1
kind: Namespace
metadata:
  name: execution-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execution-service
  namespace: execution-service
  labels:
    app: execution-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: execution-service
  template:
    metadata:
      labels:
        app: execution-service
    spec:
      containers:
        - name: execution-service
          image: vitorvieira12/execution-service:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "380Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 120
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: execution-service
  namespace: execution-service
spec:
  selector:
    app: execution-service
  ports:
    - port: 80
      targetPort: 8082
  type: LoadBalancer
